navbar style elements added

--- a/codetta-stone/src/Components/App/App.css
+++ b/codetta-stone/src/Components/App/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,19 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
+* {
+  margin: 0;
+  font-family: "Quicksand";
+  color: #000000;
+  background-image: url("./Images/orange_pinta_image.jpg");
+  
+}
+
+html {
+  background-image: url("./Images/pinta_image.jpg");
 }
