the Quiz text is now centered on the right of the open sidebar and below the navbar

--- a/codetta-stone/src/Components/App/App.css
+++ b/codetta-stone/src/Components/App/App.css
@@ -82,3 +82,12 @@ html {
 .mb-2:hover {
   color: white ;
 }
+
+/* Quiz styling*/
+
+.quiz-container {
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
